--- a/hello-arc/releases/edgeai-app/edgeai-demo-test.yaml
+++ b/hello-arc/releases/edgeai-app/edgeai-demo-test.yaml
@@ -25,7 +25,7 @@ spec:
         "kubernetes.io/hostname": moc-lgm6mslt10x
       containers:
       - name: edgeai
-        image: "rgleanndeepstream.azurecr.io/edgeai:007"
+        image: "rgleanndeepstream.azurecr.io/edgeai:001-model-rtsp"
         ports:
         - containerPort: 8554
         resources:
