--- a/hello-arc/releases/edgeai-app/edgeai-demo-test.yaml
+++ b/hello-arc/releases/edgeai-app/edgeai-demo-test.yaml
@@ -1,4 +1,44 @@
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+
+metadata:
+  name: aiedge-cluster-role
+
+rules:
+  - apiGroups: [""]
+    resources: ["nodes", "services", "pods", "endpoints"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["configmaps"]
+    verbs: ["get"]
+  - apiGroups: ["extensions"]
+    resources: ["deployments"]
+    verbs: ["get", "list", "watch"]
+---
+apiVersion: v1
+kind: ServiceAccount
+
+metadata:
+  name: aiedge-service-account
+  namespace: edgeai-demo
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+
+metadata:
+  name: aiedge-cluster-role-binding
+
+roleRef:
+  kind: ClusterRole
+  name: aiedge-cluster-role
+  apiGroup: rbac.authorization.k8s.io
+
+subjects:
+  - kind: ServiceAccount
+    name: aiedge-service-account
+    namespace: edgeai-demo
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,11 +60,12 @@ spec:
       labels:
         app: edgeai
     spec:
+      serviceAccountName: aiedge-service-account
       nodeSelector:
         "kubernetes.io/hostname": moc-lgm6mslt10x
       containers:
       - name: edgeai
-        image: "rgleanndeepstream.azurecr.io/edgeai:001-model-rtsp"
+        image: "rgleanndeepstream.azurecr.io/edgeai:007"
         ports:
         - containerPort: 8554
         resources:
