--- a/hello-arc/releases/edgeai-app/edgeai-demo-test.yaml
+++ b/hello-arc/releases/edgeai-app/edgeai-demo-test.yaml
@@ -21,7 +21,6 @@ kind: ServiceAccount
 
 metadata:
   name: aiedge-service-account
-  namespace: edgeai-demo
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -37,13 +36,13 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: aiedge-service-account
-    namespace: edgeai-demo
+    namespace: default
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: edgeai
-  namespace: edgeai-demo
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -83,7 +82,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-service
-  namespace: edgeai-demo
+  namespace: default
 spec:
   type: NodePort
   selector:
